[ iOS ] ASSERTION FAILED: ScriptDisallowedScope::InMainThread::isEventDispatchAllowedInSubtree https://bugs.webkit.org/show_bug.cgi?id=217203 <rdar://problem/69864747>

Reviewed by Tim Horton.

Source/WebCore:

* page/DragController.cpp:
(WebCore::DragController::finalizeDroppedImagePlaceholder):

Instead of immediately removing dropped image placeholder attributes, schedule an async task to remove the
placeholder and invoke the given completion handler. See WebKit/ChangeLog for more details.

* page/DragController.h:

Source/WebKit:

Refactor logic that removes drop placeholder attributes such that it runs as an asynchronously task rather than
underneath the scope of `didFinishLoadingImageForElement`. This is because the image load client call may occur
in the middle of a rendering update, during which it is not safe to change element attribute values, since that
may trigger script execution.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::didFinishLoadingImageForElement):


Canonical link: https://commits.webkit.org/230026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267915 268f45cc-cd09-0410-ab3c-d52691b4dbfc